deploy/k8s/gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: default
  labels:
    app: gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: halei-acr-new-registry.eu-central-1.cr.aliyuncs.com/test/him-gateway:${VERSION}
          ports:
            - containerPort: 8080
              name: ws
            - containerPort: 9200
              name: grpc
            - containerPort: 8180
              name: http
          livenessProbe:
            httpGet:
              path: /ping
              port: 8180
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ping
              port: 8180
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
