deploy/k8s/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: default
  labels:
    app: gateway
spec:
  type: ClusterIP
  ports:
    - name: ws
      port: 8080
      targetPort: 8080
    - name: grpc
      port: 9200
      targetPort: 9200
    - name: http
      port: 8180
      targetPort: 8180
  selector:
    app: gateway
