deploy/k8s/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /ping
    alb.ingress.kubernetes.io/healthcheck-port: "8180"
spec:
  ingressClassName: alb
  rules:
    - host: ws.him.example.com
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8180
